[package]
name = "rcli"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aead-io = "0.2.0"
anyhow = "1.0.82"
base64 = "0.22.0"
chacha20poly1305 = { version = "0.10.1", features = ["getrandom"] }
clap = {version = "4.5.4", features = ["derive"]}
stringreader = "0.1.1"
