[package]
name = "rcli"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aead-io = "0.2.0"
anyhow = "1.0.82"
base64 = "0.22.0"
chacha20poly1305 = { version = "0.10.1", features = ["getrandom"] }
chrono = "0.4.38"
clap = {version = "4.5.4", features = ["derive"]}
hmac = "0.12.1"
jwt = "0.16.0"
parse_datetime = "0.5.0"
sha2 = "0.10.8"
stringreader = "0.1.1"
