[package]
name = "rcli"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aead-io = "0.2.0"
anyhow = "1.0.82"
axum = { version = "0.7.5", features = ["http2", "query", "tracing"] }
base64 = "0.22.0"
chacha20poly1305 = { version = "0.10.1", features = ["getrandom"] }
chrono = "0.4.38"
clap = { version = "4.5.4", features = ["derive"] }
hmac = "0.12.1"
jwt = "0.16.0"
parse_datetime = "0.5.0"
serde = { version = "1.0.199", features = ["derive"] }
serde_json = "1.0.116"
serde_yaml = "0.9.34"
sha2 = "0.10.8"
stringreader = "0.1.1"
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "macros", "net", "fs"] }
toml = "0.8.12"
tower-http = { version = "0.5.2", features = ["compression-full", "cors", "trace", "fs"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
